--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
-	base = 7c4e0ad63
-	trimbase = 
+	base = bb943b33f
+	trimbase = 7c4e0ad63
 	parent = upstream
 	previous = 8c3fa979e
