--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
 	base = 1574935bc
-	trimbase = 9bd630c62
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
