--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
-	base = 99eb5dc48
-	trimbase = 
+	base = 516b6fae7
+	trimbase = 99eb5dc48
 	parent = upstream
 	previous = 8c3fa979e
