--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
 	base = ad6d1a950
-	trimbase = c5ef6ac0b
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
