--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
-	base = 75c91c4d2
-	trimbase = 
+	base = d94bd0b45
+	trimbase = 75c91c4d2
 	parent = upstream
 	previous = 8c3fa979e
