--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
 	base = 886433e63
-	trimbase = 4101f55d6
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
