--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_rospy
-	base = d91234475
-	trimbase = 
+	base = 00bd50453
+	trimbase = d91234475
 	parent = upstream
 	previous = 8c3fa979e
