--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_nodelet
-	base = 290688885
-	trimbase = 
+	base = f5488f8f0
+	trimbase = 290688885
 	parent = upstream
 	previous = 8c3fa979e
