--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_roscpp
-	base = 0a84e6607
-	trimbase = 
+	base = 6e6923356
+	trimbase = 0a84e6607
 	parent = upstream
 	previous = 8c3fa979e
