--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
 	base = 2c29efbdc
-	trimbase = 4550fa6c2
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
