--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
-	base = 1a2ccaa9b
-	trimbase = 
+	base = 5999430bd
+	trimbase = 1a2ccaa9b
 	parent = upstream
 	previous = 8c3fa979e
