--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
 	base = 7c762fe46
-	trimbase = 8647e9606
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
