--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
-	base = b53cc51a8
-	trimbase = 
+	base = ffb1e250a
+	trimbase = b53cc51a8
 	parent = upstream
 	previous = 8c3fa979e
