--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = marti_data_structures
 	base = 5838d0d0d
-	trimbase = dbda03c1e
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
