--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
 	base = 306497c10
-	trimbase = 7adf9004c
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
