--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
-	base = cce171bd1
-	trimbase = 
+	base = 4bd8a8dae
+	trimbase = cce171bd1
 	parent = upstream
 	previous = 8c3fa979e
