--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_yaml_util
 	base = f121fecd8
-	trimbase = ccb359ace
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
