--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_yaml_util
-	base = a205a054a
-	trimbase = 
+	base = 97642f876
+	trimbase = a205a054a
 	parent = upstream
 	previous = 8c3fa979e
