--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
 	base = 3d5d7e6b2
-	trimbase = 4d1a8e838
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
