--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
-	base = 4a2336772
-	trimbase = 
+	base = 38b94c2a9
+	trimbase = 4a2336772
 	parent = upstream
 	previous = 8c3fa979e
