--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
 	base = 8be84afb3
-	trimbase = 358b247d6
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
