--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
 	base = 30fe39526
-	trimbase = 855c0650a
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
