--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
-	base = a4c02da87
-	trimbase = 
+	base = 6a13332bb
+	trimbase = a4c02da87
 	parent = upstream
 	previous = 8c3fa979e
