--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_string_util
-	base = bb18c6ae3
-	trimbase = 
+	base = 8e18f9897
+	trimbase = bb18c6ae3
 	parent = upstream
 	previous = 8c3fa979e
