--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
 	base = b8f1eedda
-	trimbase = 1af9e4c1f
+	trimbase = 
 	parent = upstream
 	previous = c94f61399
