--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
-	base = 549138c89
-	trimbase = 
+	base = 1974f3ecb
+	trimbase = 549138c89
 	parent = upstream
 	previous = 8c3fa979e
