--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
 	base = 3d69fb151
-	trimbase = ed4f35bf2
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
