--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
 	base = 6934cf5b7
-	trimbase = 368b89840
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
