--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
 	base = 9279cddeb
-	trimbase = f5bd143fc
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
