--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
-	base = 67e7501d5
-	trimbase = 
+	base = c28428171
+	trimbase = 67e7501d5
 	parent = upstream
 	previous = f2b2c89ef
