--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
 	base = c4df4896d
-	trimbase = c30a4c8d1
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
