--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
-	base = ec7dfb2f1
-	trimbase = 
+	base = a31a00b31
+	trimbase = ec7dfb2f1
 	parent = upstream
 	previous = f2b2c89ef
