--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_roscpp
-	base = f14b6b852
-	trimbase = 
+	base = 52330b186
+	trimbase = f14b6b852
 	parent = upstream
 	previous = f2b2c89ef
