--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
 	base = db187ecc1
-	trimbase = 1fd78ae98
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
