--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
 	base = 3147b1854
-	trimbase = 3bb91e3a6
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
