--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
 	base = 5f70903e2
-	trimbase = 5dd897537
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
