--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
-	base = 69435d7a8
-	trimbase = 
+	base = 3dd823442
+	trimbase = 69435d7a8
 	parent = upstream
 	previous = f2b2c89ef
