--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
 	base = d8d649a38
-	trimbase = b0eb815f1
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
