--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
-	base = 9b87d6f25
-	trimbase = 
+	base = 2db3b1f40
+	trimbase = 9b87d6f25
 	parent = upstream
 	previous = f2b2c89ef
