--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
-	base = 0e09c041d
-	trimbase = 
+	base = 8e1958f09
+	trimbase = 0e09c041d
 	parent = upstream
 	previous = f2b2c89ef
