--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
-	base = 9cc92222b
-	trimbase = 
+	base = d6c418ff5
+	trimbase = 9cc92222b
 	parent = upstream
 	previous = f2b2c89ef
