--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
 	base = a9c22d2d8
-	trimbase = fa1a7fd69
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
