--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
 	base = d7704ac74
-	trimbase = 3be5600ea
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
