--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
-	base = 9fc643a17
-	trimbase = 
+	base = ee3a7c59c
+	trimbase = 9fc643a17
 	parent = upstream
 	previous = f2b2c89ef
