--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
 	base = 21303a1d8
-	trimbase = 937961a4b
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
