--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_roscpp
-	base = 85b2fb1fe
-	trimbase = 
+	base = d75f0416f
+	trimbase = 85b2fb1fe
 	parent = upstream
 	previous = f2b2c89ef
