--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
-	base = dec493f86
-	trimbase = 
+	base = 441fa363b
+	trimbase = dec493f86
 	parent = upstream
 	previous = f2b2c89ef
