--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
 	base = dcf52889c
-	trimbase = 7534d87b6
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
