--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
 	base = ee0956b4a
-	trimbase = d7c14b91c
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
