--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
 	base = 394afdf30
-	trimbase = 739e6456f
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
