--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
-	base = bf597639c
-	trimbase = 
+	base = 25e3c1137
+	trimbase = bf597639c
 	parent = upstream
 	previous = f2b2c89ef
