--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
 	base = ea6ff6be5
-	trimbase = 389df3665
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
