--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
-	base = 81ce4e62f
-	trimbase = 
+	base = 324ee884a
+	trimbase = 81ce4e62f
 	parent = upstream
 	previous = f2b2c89ef
