--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
 	base = 748f45b72
-	trimbase = 0d1231c37
+	trimbase = 
 	parent = upstream
 	previous = c87d4f01c
