--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
-	base = 16fbc3c9c
-	trimbase = 
+	base = b06aab6ae
+	trimbase = 16fbc3c9c
 	parent = upstream
 	previous = f2b2c89ef
