--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
-	base = e649b5fc4
-	trimbase = 
+	base = 89fc65477
+	trimbase = e649b5fc4
 	parent = upstream
 	previous = be2b9da13
