--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
 	base = d94bd0b45
-	trimbase = 75c91c4d2
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
