--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
-	base = 92a320d1b
-	trimbase = 
+	base = 5052821a6
+	trimbase = 92a320d1b
 	parent = upstream
 	previous = be2b9da13
