--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
 	base = 03352741e
-	trimbase = 1a35a8157
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
