--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
-	base = 773e3e970
-	trimbase = 
+	base = 39410f716
+	trimbase = 773e3e970
 	parent = upstream
 	previous = be2b9da13
