--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_rospy
-	base = 4f5a7ad7e
-	trimbase = 
+	base = 37da0ff79
+	trimbase = 4f5a7ad7e
 	parent = upstream
 	previous = be2b9da13
