--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_nodelet
-	base = e7e2c6d98
-	trimbase = 
+	base = f4e6b01dd
+	trimbase = e7e2c6d98
 	parent = upstream
 	previous = be2b9da13
