--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_roscpp
-	base = 01c94229f
-	trimbase = 
+	base = ce9744426
+	trimbase = 01c94229f
 	parent = upstream
 	previous = be2b9da13
