--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
 	base = 5999430bd
-	trimbase = 1a2ccaa9b
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
