--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
-	base = d8e611a1a
-	trimbase = 
+	base = ab2618a21
+	trimbase = d8e611a1a
 	parent = upstream
 	previous = be2b9da13
