--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = marti_data_structures
 	base = faafa36aa
-	trimbase = 5e11fa5f5
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
