--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
-	base = ca247f30f
-	trimbase = 
+	base = 6fa6bcaaf
+	trimbase = ca247f30f
 	parent = upstream
 	previous = be2b9da13
