--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_yaml_util
-	base = 264d3597b
-	trimbase = 
+	base = 40bdee6a1
+	trimbase = 264d3597b
 	parent = upstream
 	previous = be2b9da13
