--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
-	base = 0b0d23ba7
-	trimbase = 
+	base = c7319e059
+	trimbase = 0b0d23ba7
 	parent = upstream
 	previous = be2b9da13
