--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
 	base = 54d51b9c2
-	trimbase = 08080cba8
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
