--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
-	base = 9c6c4ff31
-	trimbase = 
+	base = 26860f840
+	trimbase = 9c6c4ff31
 	parent = upstream
 	previous = be2b9da13
