--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
 	base = 6a13332bb
-	trimbase = a4c02da87
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
