--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_string_util
-	base = 8b6c1ae51
-	trimbase = 
+	base = 46fd8c546
+	trimbase = 8b6c1ae51
 	parent = upstream
 	previous = be2b9da13
