--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
 	base = 1974f3ecb
-	trimbase = 549138c89
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
