--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
-	base = 86005974a
-	trimbase = 
+	base = 2925e8c7e
+	trimbase = 86005974a
 	parent = upstream
 	previous = be2b9da13
