--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
 	base = 131e7992d
-	trimbase = 1c53d34bb
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
