--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
-	base = 25d7fbdcb
-	trimbase = 
+	base = 3eb0a57a3
+	trimbase = 25d7fbdcb
 	parent = upstream
 	previous = be2b9da13
