--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
 	base = b9fd232c7
-	trimbase = bfae776d9
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
