--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
-	base = ce20ad2b0
-	trimbase = 
+	base = b847c83ce
+	trimbase = ce20ad2b0
 	parent = upstream
 	previous = be2b9da13
