--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
 	base = a979dbd06
-	trimbase = 59ff76d7c
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
