--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_rospy
-	base = 70826940a
-	trimbase = 
+	base = 0e0f3a337
+	trimbase = 70826940a
 	parent = upstream
 	previous = be2b9da13
