--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_nodelet
-	base = bcfd122ae
-	trimbase = 
+	base = cec8b271a
+	trimbase = bcfd122ae
 	parent = upstream
 	previous = be2b9da13
