--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_roscpp
-	base = 2a7f5aa12
-	trimbase = 
+	base = 304c79630
+	trimbase = 2a7f5aa12
 	parent = upstream
 	previous = be2b9da13
