--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
 	base = 3e93f5ef0
-	trimbase = bbcccb3a5
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
