--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
-	base = fb83ad0cf
-	trimbase = 
+	base = 8efaf4b6b
+	trimbase = fb83ad0cf
 	parent = upstream
 	previous = be2b9da13
