--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
-	base = df42b29f5
-	trimbase = 
+	base = 843e8c8af
+	trimbase = df42b29f5
 	parent = upstream
 	previous = be2b9da13
