--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = marti_data_structures
-	base = 60a0ada7e
-	trimbase = 
+	base = 6a6eb3590
+	trimbase = 60a0ada7e
 	parent = upstream
 	previous = be2b9da13
