--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
-	base = 4d3ae44ae
-	trimbase = 
+	base = 36fad003c
+	trimbase = 4d3ae44ae
 	parent = upstream
 	previous = be2b9da13
