--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_yaml_util
 	base = 0fb4122e5
-	trimbase = b26432717
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
