--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
 	base = 3c90ba522
-	trimbase = 77056cd83
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
