--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
-	base = 7751379b2
-	trimbase = 
+	base = 011808225
+	trimbase = 7751379b2
 	parent = upstream
 	previous = be2b9da13
