--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
-	base = cf3af9958
-	trimbase = 
+	base = abed7d141
+	trimbase = cf3af9958
 	parent = upstream
 	previous = be2b9da13
