--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
 	base = d99637523
-	trimbase = 04ba91584
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
