--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_string_util
 	base = f0d698ada
-	trimbase = da08bf3cb
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
