--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
 	base = 73c134139
-	trimbase = 656a8e005
+	trimbase = 
 	parent = upstream
 	previous = 8c3fa979e
