--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
 	base = f58a3a406
-	trimbase = f6f6a514f
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
