--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
-	base = a89dba3a6
-	trimbase = 
+	base = 46aa49f6d
+	trimbase = a89dba3a6
 	parent = upstream
 	previous = 36a0b20dc
