--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
 	base = 95f4aabb1
-	trimbase = 210db997a
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
