--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
-	base = 6facfe240
-	trimbase = 
+	base = 3110b4605
+	trimbase = 6facfe240
 	parent = upstream
 	previous = 36a0b20dc
