--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
-	base = 9260e3773
-	trimbase = 
+	base = dbffc1641
+	trimbase = 9260e3773
 	parent = upstream
 	previous = 36a0b20dc
