--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
-	base = d0bc9b6e8
-	trimbase = 
+	base = ae6a76e78
+	trimbase = d0bc9b6e8
 	parent = upstream
 	previous = 36a0b20dc
