--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_roscpp
-	base = dfe363561
-	trimbase = 
+	base = 7c98cf3f3
+	trimbase = dfe363561
 	parent = upstream
 	previous = 36a0b20dc
