--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
 	base = 767efc947
-	trimbase = 7ceebec1c
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
