--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
-	base = a803411da
-	trimbase = 
+	base = ffde5da59
+	trimbase = a803411da
 	parent = upstream
 	previous = 36a0b20dc
