--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
 	base = fb928c529
-	trimbase = 084773e89
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
