--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
-	base = e4c2b5592
-	trimbase = 
+	base = 473b688e1
+	trimbase = e4c2b5592
 	parent = upstream
 	previous = 36a0b20dc
