--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
-	base = 746bd63e1
-	trimbase = 
+	base = 1d0cf23a8
+	trimbase = 746bd63e1
 	parent = upstream
 	previous = 36a0b20dc
