--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
 	base = de60c3f7a
-	trimbase = 6c15f88c6
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
