--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
-	base = c6e750849
-	trimbase = 
+	base = 07b01961c
+	trimbase = c6e750849
 	parent = upstream
 	previous = 36a0b20dc
