--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
-	base = 9ae7a9caf
-	trimbase = 
+	base = e876fb3fd
+	trimbase = 9ae7a9caf
 	parent = upstream
 	previous = 36a0b20dc
