--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
-	base = 107d9057d
-	trimbase = 
+	base = 74794e860
+	trimbase = 107d9057d
 	parent = upstream
 	previous = 36a0b20dc
