--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
-	base = 61e5feec4
-	trimbase = 
+	base = 0e02fb89e
+	trimbase = 61e5feec4
 	parent = upstream
 	previous = 36a0b20dc
