--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
 	base = f8c6e67ed
-	trimbase = 02b52eacd
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
