--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
-	base = 44a22b4b8
-	trimbase = 
+	base = 6e661c011
+	trimbase = 44a22b4b8
 	parent = upstream
 	previous = 36a0b20dc
