--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
 	base = 4e6acaeb3
-	trimbase = ef458d124
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
