--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
-	base = 7f648d726
-	trimbase = 
+	base = 9adaa09af
+	trimbase = 7f648d726
 	parent = upstream
 	previous = 36a0b20dc
