--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
-	base = db3444902
-	trimbase = 
+	base = 41383353b
+	trimbase = db3444902
 	parent = upstream
 	previous = 36a0b20dc
