--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
 	base = 3e0aae564
-	trimbase = d4f7e5cb8
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
