--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
-	base = 044849c7e
-	trimbase = 
+	base = f7faa1682
+	trimbase = 044849c7e
 	parent = upstream
 	previous = 36a0b20dc
