--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_roscpp
-	base = 604e0f513
-	trimbase = 
+	base = 5fce547dd
+	trimbase = 604e0f513
 	parent = upstream
 	previous = 36a0b20dc
