--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
 	base = 2fe116ffa
-	trimbase = e791f4ed1
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
