--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
-	base = 3a5af0722
-	trimbase = 
+	base = 50b0e589d
+	trimbase = 3a5af0722
 	parent = upstream
 	previous = 36a0b20dc
