--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
 	base = 441fa363b
-	trimbase = dec493f86
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
