--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
-	base = d19004f59
-	trimbase = 
+	base = 4fc75986d
+	trimbase = d19004f59
 	parent = upstream
 	previous = 36a0b20dc
