--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
 	base = 8f5da2138
-	trimbase = 20625ae36
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
