--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
-	base = bbada010e
-	trimbase = 
+	base = abca6d5c8
+	trimbase = bbada010e
 	parent = upstream
 	previous = 36a0b20dc
