--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
 	base = 2839ef7ba
-	trimbase = da18bd526
+	trimbase = 
 	parent = upstream
 	previous = f2b2c89ef
