--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
-	base = ddbfd4818
-	trimbase = 
+	base = 04b7065c8
+	trimbase = ddbfd4818
 	parent = upstream
 	previous = 36a0b20dc
