--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
-	base = d3e2c3f37
-	trimbase = 
+	base = a6de90448
+	trimbase = d3e2c3f37
 	parent = upstream
 	previous = 36a0b20dc
