--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
-	base = 3e02f01ae
-	trimbase = 
+	base = 47d8c41ef
+	trimbase = 3e02f01ae
 	parent = upstream
 	previous = 36a0b20dc
