--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
-	base = 78a110514
-	trimbase = 
+	base = 775ccd473
+	trimbase = 78a110514
 	parent = upstream
 	previous = 36a0b20dc
