--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
-	base = bf2d2f31e
-	trimbase = 
+	base = e5a337faf
+	trimbase = bf2d2f31e
 	parent = upstream
 	previous = b6cd5002d
