--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
 	base = b847c83ce
-	trimbase = ce20ad2b0
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
