--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
-	base = 36fe5847a
-	trimbase = 
+	base = 7fdd1d257
+	trimbase = 36fe5847a
 	parent = upstream
 	previous = b6cd5002d
