--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
 	base = d9f987c24
-	trimbase = eba4ee256
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
