--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
-	base = f77a8d339
-	trimbase = 
+	base = 6017d030a
+	trimbase = f77a8d339
 	parent = upstream
 	previous = b6cd5002d
