--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
 	base = 631998f5c
-	trimbase = 591e5ad22
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
