--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
-	base = 0773ca888
-	trimbase = 
+	base = 1402714af
+	trimbase = 0773ca888
 	parent = upstream
 	previous = b6cd5002d
