--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_rospy
-	base = 811c1538b
-	trimbase = 
+	base = fa55c3b6b
+	trimbase = 811c1538b
 	parent = upstream
 	previous = b6cd5002d
