--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_nodelet
-	base = 9c5302b54
-	trimbase = 
+	base = 39eb717fd
+	trimbase = 9c5302b54
 	parent = upstream
 	previous = b6cd5002d
