--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_roscpp
-	base = 3cfddc84d
-	trimbase = 
+	base = 4fdb9b42e
+	trimbase = 3cfddc84d
 	parent = upstream
 	previous = b6cd5002d
