--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
 	base = 8efaf4b6b
-	trimbase = fb83ad0cf
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
