--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
-	base = 267f93b4a
-	trimbase = 
+	base = 581cf3001
+	trimbase = 267f93b4a
 	parent = upstream
 	previous = b6cd5002d
