--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
-	base = 1761d7952
-	trimbase = 
+	base = 97d19a380
+	trimbase = 1761d7952
 	parent = upstream
 	previous = b6cd5002d
