--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = marti_data_structures
-	base = 1ea70ea71
-	trimbase = 
+	base = b25dd1011
+	trimbase = 1ea70ea71
 	parent = upstream
 	previous = b6cd5002d
