--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
-	base = 0376ed714
-	trimbase = 
+	base = 496caf66b
+	trimbase = 0376ed714
 	parent = upstream
 	previous = b6cd5002d
