--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_yaml_util
 	base = 7ffc3cda6
-	trimbase = 88586f1fd
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
