--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_yaml_util
-	base = f351cf7e5
-	trimbase = 
+	base = a02b6cb96
+	trimbase = f351cf7e5
 	parent = upstream
 	previous = b6cd5002d
