--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
 	base = 011808225
-	trimbase = 7751379b2
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
