--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
-	base = f1c0e2407
-	trimbase = 
+	base = be18b2458
+	trimbase = f1c0e2407
 	parent = upstream
 	previous = b6cd5002d
