--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
-	base = 0e49c888e
-	trimbase = 
+	base = 2f3d49417
+	trimbase = 0e49c888e
 	parent = upstream
 	previous = b6cd5002d
