--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
 	base = 9629ac156
-	trimbase = 6993a8e4a
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
