--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
-	base = 02c53b6e7
-	trimbase = 
+	base = 4f7578b4f
+	trimbase = 02c53b6e7
 	parent = upstream
 	previous = b6cd5002d
