--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_string_util
 	base = cce0bb4f3
-	trimbase = f9e4c5469
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
