--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_string_util
-	base = 5ef6e1bf4
-	trimbase = 
+	base = 5ecb8190b
+	trimbase = 5ef6e1bf4
 	parent = upstream
 	previous = b6cd5002d
