--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
 	base = 6450fcdb0
-	trimbase = eb27c149b
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
