--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
-	base = 58d5a0a84
-	trimbase = 
+	base = a5178787b
+	trimbase = 58d5a0a84
 	parent = upstream
 	previous = b6cd5002d
