--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
 	base = 27a92879a
-	trimbase = 5e33ad942
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
