--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
-	base = 46d05b6bd
-	trimbase = 
+	base = 66939f6a8
+	trimbase = 46d05b6bd
 	parent = upstream
 	previous = b6cd5002d
