--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
 	base = 89fc65477
-	trimbase = e649b5fc4
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
