--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
-	base = ea0d10641
-	trimbase = 
+	base = 4151c3d22
+	trimbase = ea0d10641
 	parent = upstream
 	previous = b6cd5002d
