--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
-	base = 0a6bb7631
-	trimbase = 
+	base = fb000a682
+	trimbase = 0a6bb7631
 	parent = upstream
 	previous = b6cd5002d
