--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
-	base = 314d0b284
-	trimbase = 
+	base = d40939f46
+	trimbase = 314d0b284
 	parent = upstream
 	previous = b6cd5002d
