--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_rospy
-	base = ee3432ff6
-	trimbase = 
+	base = e4488f0fe
+	trimbase = ee3432ff6
 	parent = upstream
 	previous = b6cd5002d
