--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_nodelet
-	base = 1bb1e2248
-	trimbase = 
+	base = 22e3aa1d9
+	trimbase = 1bb1e2248
 	parent = upstream
 	previous = b6cd5002d
