--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_roscpp
-	base = cf8788686
-	trimbase = 
+	base = 3dda339ec
+	trimbase = cf8788686
 	parent = upstream
 	previous = b6cd5002d
