--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
-	base = 117bef13d
-	trimbase = 
+	base = 4cb5d6268
+	trimbase = 117bef13d
 	parent = upstream
 	previous = b6cd5002d
