--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
 	base = 44378857d
-	trimbase = 7f2834909
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
