--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
-	base = ba61897c8
-	trimbase = 
+	base = 9adbe6762
+	trimbase = ba61897c8
 	parent = upstream
 	previous = b6cd5002d
