--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = marti_data_structures
 	base = d8f53479c
-	trimbase = c676478bb
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
