--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = marti_data_structures
-	base = 6e15f0a8c
-	trimbase = 
+	base = 49520bf54
+	trimbase = 6e15f0a8c
 	parent = upstream
 	previous = b6cd5002d
