--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
-	base = 7812b551b
-	trimbase = 
+	base = 33df27d9e
+	trimbase = 7812b551b
 	parent = upstream
 	previous = b6cd5002d
