--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_yaml_util
 	base = 40bdee6a1
-	trimbase = 264d3597b
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
