--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_yaml_util
-	base = f359884e5
-	trimbase = 
+	base = d740e1e7a
+	trimbase = f359884e5
 	parent = upstream
 	previous = b6cd5002d
