--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
-	base = f5fdb438a
-	trimbase = 
+	base = 0cbb4248d
+	trimbase = f5fdb438a
 	parent = upstream
 	previous = b6cd5002d
