--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
-	base = ee66f51c6
-	trimbase = 
+	base = c3ef89af9
+	trimbase = ee66f51c6
 	parent = upstream
 	previous = b6cd5002d
