--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
 	base = c53140a9e
-	trimbase = c63f4267a
+	trimbase = 
 	parent = upstream
 	previous = be2b9da13
