--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
-	base = b01516973
-	trimbase = 
+	base = eb78b382d
+	trimbase = b01516973
 	parent = upstream
 	previous = b6cd5002d
