--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_string_util
-	base = 0505edf34
-	trimbase = 
+	base = 1fa34d767
+	trimbase = 0505edf34
 	parent = upstream
 	previous = b6cd5002d
