--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
-	base = aed2ac6aa
-	trimbase = 
+	base = 676bd5800
+	trimbase = aed2ac6aa
 	parent = upstream
 	previous = b6cd5002d
