--- a/swri_string_util/CMakeLists.txt
+++ b/swri_string_util/CMakeLists.txt
@@ -16,10 +16,14 @@ add_library(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 
 if(CATKIN_ENABLE_TESTING)
+  find_package(Threads REQUIRED)
   find_package(rostest REQUIRED)
   
   add_rostest_gtest(test_string_util test/string_util.test test/test_string_util.cpp)
-  target_link_libraries(test_string_util ${PROJECT_NAME})
+  target_link_libraries(test_string_util
+    ${PROJECT_NAME}
+    ${CMAKE_THREAD_LIBS_INIT}
+  )
 endif()
 
 install(DIRECTORY include/${PROJECT_NAME}/
