--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7504a1cf7
-	trimbase = 
+	trim = swri_route_util
+	base = a16034077
+	trimbase = 7504a1cf7
 	parent = upstream
 	previous = 0f4e2c77a
