--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 75d983332
-	trimbase = 
+	trim = swri_system_util
+	base = b418baa53
+	trimbase = 75d983332
 	parent = upstream
 	previous = 0f4e2c77a
