--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = af155c041
-	trimbase = 
+	trim = swri_rospy
+	base = 2bc5c5559
+	trimbase = af155c041
 	parent = upstream
 	previous = 0f4e2c77a
