--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f578434a7
-	trimbase = 
+	trim = swri_nodelet
+	base = 7d0991a63
+	trimbase = f578434a7
 	parent = upstream
 	previous = 0f4e2c77a
