--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6f59b39b5
-	trimbase = 
+	trim = swri_roscpp
+	base = 3d90c631e
+	trimbase = 6f59b39b5
 	parent = upstream
 	previous = 0f4e2c77a
