--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 570b0e7d6
-	trimbase = 
+	trim = marti_data_structures
+	base = 406ebdcc5
+	trimbase = 570b0e7d6
 	parent = upstream
 	previous = 0f4e2c77a
