--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 853457e47
-	trimbase = 
+	trim = swri_console_util
+	base = 7e6dbb796
+	trimbase = 853457e47
 	parent = upstream
 	previous = 0f4e2c77a
