--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ba02e6357
-	trimbase = 
+	trim = swri_transform_util
+	base = eed9d3f9a
+	trimbase = ba02e6357
 	parent = upstream
 	previous = 0f4e2c77a
