--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 245f8cf33
-	trimbase = 
+	trim = swri_geometry_util
+	base = 51b3fc09d
+	trimbase = 245f8cf33
 	parent = upstream
 	previous = 0f4e2c77a
