--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6c88cf7bd
-	trimbase = 
+	trim = swri_math_util
+	base = 73d1120e3
+	trimbase = 6c88cf7bd
 	parent = upstream
 	previous = 0f4e2c77a
