--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6f3413f62
+	base = d52333d79
 	trimbase = 
 	parent = debian/noetic/swri_geometry_util
-	previous = 
+	previous = 6f3413f62
