--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a0ba7f931
+	base = 24b78223b
 	trimbase = 
 	parent = release/noetic/swri_yaml_util
-	previous = 
+	previous = a0ba7f931
