--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 440f83e63
+	base = b9ab621e7
 	trimbase = 
 	parent = debian/noetic/swri_yaml_util
-	previous = 
+	previous = 440f83e63
