--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 13ab6d907
+	base = a0f6a5578
 	trimbase = 
 	parent = debian/noetic/swri_console_util
-	previous = 
+	previous = 13ab6d907
