--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a16034077
+	base = 614609024
 	trimbase = 
 	parent = release/noetic/swri_route_util
-	previous = 
+	previous = a16034077
