--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bf7c9fc17
+	base = a85dcf86c
 	trimbase = 
 	parent = debian/noetic/swri_route_util
-	previous = 
+	previous = bf7c9fc17
