--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 854d6af79
+	base = 0d4805bf5
 	trimbase = 
 	parent = debian/noetic/swri_system_util
-	previous = 
+	previous = 854d6af79
