--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 406ebdcc5
+	base = bacecb673
 	trimbase = 
 	parent = release/noetic/marti_data_structures
-	previous = 
+	previous = 406ebdcc5
