--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 190467619
+	base = 3b63a95d8
 	trimbase = 
 	parent = debian/noetic/marti_data_structures
-	previous = 
+	previous = 190467619
