--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3f65e6d6d
+	base = 6564e2341
 	trimbase = 
 	parent = debian/noetic/swri_transform_util
-	previous = 
+	previous = 3f65e6d6d
