--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ed4b307f9
+	base = 41a62d0f0
 	trimbase = 
 	parent = release/noetic/swri_string_util
-	previous = 
+	previous = ed4b307f9
