--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6bfb7e926
+	base = 303a2836d
 	trimbase = 
 	parent = debian/noetic/swri_string_util
-	previous = 
+	previous = 6bfb7e926
