--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3d90c631e
+	base = ce01d973a
 	trimbase = 
 	parent = release/noetic/swri_roscpp
-	previous = 
+	previous = 3d90c631e
