--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1467f969c
+	base = c0c35cf56
 	trimbase = 
 	parent = debian/noetic/swri_roscpp
-	previous = 
+	previous = 1467f969c
