--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c4a1e1584
+	base = 6cf37d31b
 	trimbase = 
 	parent = debian/noetic/swri_serial_util
-	previous = 
+	previous = c4a1e1584
