--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 046899c88
+	base = f85d9d7f9
 	trimbase = 
 	parent = release/noetic/swri_dbw_interface
-	previous = 
+	previous = 046899c88
