--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d4c2e44be
+	base = 6048aea96
 	trimbase = 
 	parent = debian/noetic/swri_dbw_interface
-	previous = 
+	previous = d4c2e44be
