--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e1c88a6e6
+	base = fb53be79f
 	trimbase = 
 	parent = release/noetic/swri_prefix_tools
-	previous = 
+	previous = e1c88a6e6
