--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dc0f21e4f
+	base = c76573a0e
 	trimbase = 
 	parent = debian/noetic/swri_prefix_tools
-	previous = 
+	previous = dc0f21e4f
