--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 82818462f
+	base = c023fe6d6
 	trimbase = 
 	parent = debian/noetic/swri_math_util
-	previous = 
+	previous = 82818462f
