--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7d0991a63
+	base = 91f49d7fa
 	trimbase = 
 	parent = release/noetic/swri_nodelet
-	previous = 
+	previous = 7d0991a63
