--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9b5d6dfb0
+	base = db73b1c84
 	trimbase = 
 	parent = debian/noetic/swri_nodelet
-	previous = 
+	previous = 9b5d6dfb0
