--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0abd0f7fa
+	base = bc5e4c220
 	trimbase = 
 	parent = debian/noetic/swri_opencv_util
-	previous = 
+	previous = 0abd0f7fa
