--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 26a260f86
+	base = aae25b24d
 	trimbase = 
 	parent = debian/noetic/swri_image_util
-	previous = 
+	previous = 26a260f86
