--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 50e98a746
+	base = 7e35de30c
 	trimbase = 
 	parent = debian/noetic/swri_rospy
-	previous = 
+	previous = 50e98a746
