--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 00f204164
+	base = 739805bf6
 	trimbase = 
 	parent = debian/noetic/swri_geometry_util
-	previous = 
+	previous = 00f204164
