--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e9fd96525
+	base = cff219a85
 	trimbase = 
 	parent = debian/noetic/swri_yaml_util
-	previous = 
+	previous = e9fd96525
