--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f0cf70914
+	base = b374d28ca
 	trimbase = 
 	parent = debian/noetic/swri_console_util
-	previous = 
+	previous = f0cf70914
