--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7dfed1462
+	base = a12985283
 	trimbase = 
 	parent = debian/noetic/swri_route_util
-	previous = 
+	previous = 7dfed1462
