--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1107bc38a
+	base = f6a0e315f
 	trimbase = 
 	parent = debian/noetic/swri_system_util
-	previous = 
+	previous = 1107bc38a
