--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4d85463c1
+	base = 521d3db6c
 	trimbase = 
 	parent = debian/noetic/marti_data_structures
-	previous = 
+	previous = 4d85463c1
