--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a01be9f05
+	base = 1b8b608fb
 	trimbase = 
 	parent = debian/noetic/swri_transform_util
-	previous = 
+	previous = a01be9f05
