--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6fd37eff1
+	base = d080e24fd
 	trimbase = 
 	parent = debian/noetic/swri_string_util
-	previous = 
+	previous = 6fd37eff1
