--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ef669ba5e
+	base = 5b6fdfde7
 	trimbase = 
 	parent = debian/noetic/swri_roscpp
-	previous = 
+	previous = ef669ba5e
