--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e3894b244
+	base = 7dac1d135
 	trimbase = 
 	parent = debian/noetic/swri_serial_util
-	previous = 
+	previous = e3894b244
