--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3a6ff2558
+	base = 0ab278d3e
 	trimbase = 
 	parent = debian/noetic/swri_dbw_interface
-	previous = 
+	previous = 3a6ff2558
