--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f8c39dee5
+	base = acd58ae00
 	trimbase = 
 	parent = debian/noetic/swri_prefix_tools
-	previous = 
+	previous = f8c39dee5
