--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 490ce2ddc
+	base = 9c1f42c2d
 	trimbase = 
 	parent = debian/noetic/swri_math_util
-	previous = 
+	previous = 490ce2ddc
