--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e04a41fb1
+	base = d33cabb6c
 	trimbase = 
 	parent = debian/noetic/swri_nodelet
-	previous = 
+	previous = e04a41fb1
