--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 027ac0b0e
+	base = 894b01247
 	trimbase = 
 	parent = debian/noetic/swri_opencv_util
-	previous = 
+	previous = 027ac0b0e
