--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9a7ce4b7e
+	base = 782425b51
 	trimbase = 
 	parent = debian/noetic/swri_image_util
-	previous = 
+	previous = 9a7ce4b7e
