--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f19410223
+	base = bb302423a
 	trimbase = 
 	parent = debian/noetic/swri_rospy
-	previous = 
+	previous = f19410223
