--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 51b3fc09d
+	base = cb61ba63a
 	trimbase = 
 	parent = release/noetic/swri_geometry_util
-	previous = 
+	previous = 51b3fc09d
