--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 527971bb7
+	base = 96b7a0da0
 	trimbase = 
 	parent = rpm/noetic/swri_geometry_util
-	previous = 
+	previous = 527971bb7
