--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f9c6dffae
+	base = 498627f45
 	trimbase = 
 	parent = rpm/noetic/swri_yaml_util
-	previous = 
+	previous = f9c6dffae
