--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7e6dbb796
+	base = f4769059c
 	trimbase = 
 	parent = release/noetic/swri_console_util
-	previous = 
+	previous = 7e6dbb796
