--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c72b9f0fb
+	base = 87e6090cd
 	trimbase = 
 	parent = rpm/noetic/swri_console_util
-	previous = 
+	previous = c72b9f0fb
