--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3772a59d6
+	base = 90c9d5fd3
 	trimbase = 
 	parent = rpm/noetic/swri_route_util
-	previous = 
+	previous = 3772a59d6
