--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b418baa53
+	base = 2d4d752a9
 	trimbase = 
 	parent = release/noetic/swri_system_util
-	previous = 
+	previous = b418baa53
