--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3a38c307b
+	base = 9214b5eda
 	trimbase = 
 	parent = rpm/noetic/swri_system_util
-	previous = 
+	previous = 3a38c307b
