--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 113156bde
+	base = 7ee94e72f
 	trimbase = 
 	parent = rpm/noetic/marti_data_structures
-	previous = 
+	previous = 113156bde
