--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eed9d3f9a
+	base = 5f5fafac1
 	trimbase = 
 	parent = release/noetic/swri_transform_util
-	previous = 
+	previous = eed9d3f9a
