--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 15b84211a
+	base = aaedc4ff5
 	trimbase = 
 	parent = rpm/noetic/swri_transform_util
-	previous = 
+	previous = 15b84211a
