--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ed4b307f9
+	base = 9e922b8b4
 	trimbase = 
 	parent = release/noetic/swri_string_util
-	previous = 
+	previous = ed4b307f9
