--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d95ef95fa
+	base = 141116e87
 	trimbase = 
 	parent = rpm/noetic/swri_string_util
-	previous = 
+	previous = d95ef95fa
