--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3d90c631e
+	base = 2c6e2004f
 	trimbase = 
 	parent = release/noetic/swri_roscpp
-	previous = 
+	previous = 3d90c631e
