--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = de2a6057d
+	base = 1f618bcd8
 	trimbase = 
 	parent = rpm/noetic/swri_roscpp
-	previous = 
+	previous = de2a6057d
