--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2b810f00f
+	base = e15f22ea2
 	trimbase = 
 	parent = release/noetic/swri_serial_util
-	previous = 
+	previous = 2b810f00f
