--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 309951c7a
+	base = d94544f6d
 	trimbase = 
 	parent = rpm/noetic/swri_serial_util
-	previous = 
+	previous = 309951c7a
