--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f1fd7cd19
+	base = 221805bd7
 	trimbase = 
 	parent = rpm/noetic/swri_dbw_interface
-	previous = 
+	previous = f1fd7cd19
