--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0f80e27c1
+	base = 1a4724a01
 	trimbase = 
 	parent = rpm/noetic/swri_prefix_tools
-	previous = 
+	previous = 0f80e27c1
