--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 73d1120e3
+	base = f708fd324
 	trimbase = 
 	parent = release/noetic/swri_math_util
-	previous = 
+	previous = 73d1120e3
