--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 14f74debe
+	base = 5645a555a
 	trimbase = 
 	parent = rpm/noetic/swri_math_util
-	previous = 
+	previous = 14f74debe
