--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e598cedb5
+	base = 0774f82a7
 	trimbase = 
 	parent = rpm/noetic/swri_nodelet
-	previous = 
+	previous = e598cedb5
