--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 25f126605
+	base = 07209797c
 	trimbase = 
 	parent = release/noetic/swri_opencv_util
-	previous = 
+	previous = 25f126605
