--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b6d4aeab2
+	base = 3e1acbb67
 	trimbase = 
 	parent = rpm/noetic/swri_opencv_util
-	previous = 
+	previous = b6d4aeab2
