--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4b144437a
+	base = 54ceaa9b6
 	trimbase = 
 	parent = release/noetic/swri_image_util
-	previous = 
+	previous = 4b144437a
