--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 553c97855
+	base = 99f2686ee
 	trimbase = 
 	parent = rpm/noetic/swri_image_util
-	previous = 
+	previous = 553c97855
