--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2bc5c5559
+	base = f067ee603
 	trimbase = 
 	parent = release/noetic/swri_rospy
-	previous = 
+	previous = 2bc5c5559
