--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cca86414d
+	base = e3c117627
 	trimbase = 
 	parent = rpm/noetic/swri_rospy
-	previous = 
+	previous = cca86414d
