--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c66b68346
-	trimbase = 
+	trim = swri_opencv_util
+	base = 0b2313f38
+	trimbase = c66b68346
 	parent = upstream
 	previous = 4f5a4fb3c
