--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4de30200f
-	trimbase = 
+	trim = swri_serial_util
+	base = fb8dad659
+	trimbase = 4de30200f
 	parent = upstream
 	previous = 4f5a4fb3c
